# SyncPad

./: .gitignore  CLAUDE.md  README.md  opencode.json  package-lock.json  package.json  protocol.md  test_viewport.js
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/dev/sidhanthm/syncpad/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/sidhanthm/syncpad/: MainActivity.kt
android/app/src/main/java/dev/sidhanthm/syncpad/model/: StrokePoint.kt  StrokeSerializer.kt
android/app/src/main/java/dev/sidhanthm/syncpad/ui/: DrawingSurfaceView.kt
android/app/src/main/java/dev/sidhanthm/syncpad/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/dev/sidhanthm/syncpad/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
planning/architecture/: architecture.md
planning/specs/: phase1.md  phase2.md
server/: index.js
src/: CONTEXT.md  index.html  main.js  style.css
src-tauri/: CONTEXT.md  Cargo.toml  tauri.conf.json
src-tauri/src/: http_server.rs  lib.rs  main.rs  mdns.rs  protocol.rs  state.rs  ws_server.rs
src/lib/: protocol.js  renderer.js  stroke-model.js  viewport.js
viewer/: index.html
