[package]
name = "syncpad"
version = "0.1.0"
description = "Split-screen note-taking: S Pen draws, desktop displays"
authors = ["sid_m"]
edition = "2021"

[lib]
name = "syncpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (Tauri uses tokio under the hood)
tokio = { version = "1", features = ["full"] }

# WebSocket server
tokio-tungstenite = "0.24"
futures-util = "0.3"

# HTTP server (serves phone client + pairing endpoint)
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# mDNS service discovery
mdns-sd = "0.12"

# Binary serialization (for control messages)
rmp-serde = "1"
byteorder = "1"

# Crypto (pairing tokens, HMAC auth)
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.22"

# Utility
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
hostname = "0.4"

[profile.dev]
# Faster iteration: skip heavy optimizations for deps
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
